2007-12-03  Aidan Kehoe  <kehoea@parhasard.net>

	* bytecomp.el (byte-compile-file-form-custom-declare-variable):
	Instead of using a keyword argument that's incompatible with 21.4,
	modify the byte compiled init code to change the variable's
	standard-value property itself. 

2007-12-04  Aidan Kehoe  <kehoea@parhasard.net>

	* mule/iso-with-esc.el:
	* mule/iso-with-esc.el ('iso-latin-1-with-esc): New.
	Provide the variable-length rarely-used ISO 2022 compatible coding
	systems for Latin (that is, iso-8859-[1-16]) again, to address
	Stephen's veto. 

2007-12-04  Aidan Kehoe  <kehoea@parhasard.net>

	* autoload.el (make-autoload):
	Support auto-autoloads for coding systems. 

2007-12-01  Aidan Kehoe  <kehoea@parhasard.net>

	* mule/mule-coding.el (iso-8859-1):
	* mule/latin.el (iso-8859-2):
	* mule/latin.el (iso-8859-3):
	* mule/latin.el (iso-8859-4):
	* mule/cyrillic.el (iso-8859-5):
	* mule/greek.el (iso-8859-7):
	* mule/hebrew.el (iso-8859-8):
	* mule/latin.el (iso-8859-9):
	* mule/latin.el (iso-8859-15):
	* mule/latin.el (iso-8859-16):
	Move the various ISO 8859 coding systems away from the ISO 2022
	implementation to a #'make-8-bit-coding-system implementation;
	this has the handy side-effect of adressing most of the
	unification problems the old implementation had.

	Add aliases for GNU compatibility.
	  
	Still no warning on the imminent corruption of data, though. I'm
	working on it.
	* mule/greek.el (windows-1253):
	Unconditionally provide this coding system.

2007-12-01  Aidan Kehoe  <kehoea@parhasard.net>

	* bytecomp.el (byte-compile-output-file-form):
	Bind print-gensym to a cons, to tell the Lisp printer not to clear
	print-gensym-alist on exit from #'print. This is appropriate
	because #'byte-compile-output-file-form may be called multiple
	times for a given output file, and re-using the
	#1=#:... placeholders in that context is inappropriate. 

2007-11-29  Aidan Kehoe  <kehoea@parhasard.net>

	* mule/mule-coding.el (make-8-bit-generate-helper):